@@ -113,7 +113,7 @@ Magnitude subclass: #Number
 Number subclass: #SmallInteger
        instanceVariableNames: ''!
 
-Number subclass: #SmallFloat
+Number subclass: #Float
        instanceVariableNames: ''!
 
 Object subclass: #Boolean
