@@ -216,7 +216,7 @@ _syx_parser_parse_term (SyxParser *self)
       syx_token_free (token);
       break;
     case SYX_TOKEN_FLOAT_CONST:
-      syx_bytecode_push_literal (self->bytecode, syx_small_float_new (token.value.floating));
+      syx_bytecode_push_literal (self->bytecode, syx_float_new (token.value.floating));
       syx_token_free (token);
       break;
     case SYX_TOKEN_SYM_CONST:
@@ -252,7 +252,7 @@ _syx_parser_parse_term (SyxParser *self)
 	  if (token.type == SYX_TOKEN_INT_CONST)
 	    syx_bytecode_push_literal (self->bytecode, syx_small_integer_new (-token.value.integer));
 	  else if (token.type == SYX_TOKEN_FLOAT_CONST)
-	    syx_bytecode_push_literal (self->bytecode, syx_small_float_new (-token.value.floating));
+	    syx_bytecode_push_literal (self->bytecode, syx_float_new (-token.value.floating));
 	  else
 	    syx_error ("Negation not followed by number");
 
